varkroad api 작성 완료 및 vark 등록 시 varkroad 업데이트 api 구현 완료